Hype URL update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<header class="header"></header>
 			<article class="main animated animatedFadeInUp fadeInUp">
 				<object type="image/svg+xml" data="Assets/propeller-hat.svg" id="logo"> Propeller hat, made by the lovely Jen Phelan </object>
-				<p>Designer / General riff-raff creator @<a href="https://hypelabs.dev/hypenotic-redux/" target="_blank">Hypenotic</a>, Toronto.</p>
+				<p>Designer / General riff-raff creator @<a href="https://hypenotic.com/" target="_blank">Hypenotic</a>, Toronto.</p>
 					<p>Working in do-good matters, wholesome communication & generative strategy.</p>  
 			</article>
 			<aside class="aside aside-1 animated animatedFadeInUp fadeInUp delay1">
