--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<path d="M67.8945 17.0548C68.2552 16.9963 68.9055 17.0296 68.7739 16.7189C68.6042 16.8165 68.2827 16.8831 67.8945 16.9376V17.0548Z"/>
 					<path d="M67.5874 17.6487C67.6789 17.7269 67.8006 17.7589 67.9188 17.7361C68.5067 17.6225 69.212 17.452 69.5645 17.2612C68.9196 17.3347 68.1375 17.4704 67.5374 17.6059L67.5874 17.6487Z"/>
 					</svg>					
-				<p>General riff-raff creator (aka Designer) @<a href="https://hypenotic.com/">Hypenotic</a>, Toronto.</p>
+				<p>Multi-hat Designer @<a href="https://hypenotic.com/">Hypenotic</a>, Toronto.</p>
 					<p>Working in do-good matters, wholesome communication & generative strategy.</p>  
 			</article>
 			<aside class="aside aside-1 animated animatedFadeInUp fadeInUp delay1">
