--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">	
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Josh's Just-Enough</title>
+		<title>Josh Josh Josh Josh Josh Josh Josh</title>
 		<link rel="icon" href="Assets/favicon.svg" type="image/svg+xml">
 
 		<link rel="stylesheet" type="text/css" href="apercu.css">
