--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">	
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Josh Josh Josh Josh Josh Josh Josh</title>
+		<title>Josh-hyphen-Millard</title>
 		<link rel="icon" href="Assets/favicon.svg" type="image/svg+xml">
 
 		<link rel="stylesheet" type="text/css" href="apercu.css">
 		<link rel="stylesheet" type="text/css" href="type.css">
 		<link rel="stylesheet" type="text/css" href="animation.css">
 		<link rel="stylesheet" type="text/css" href="landing.css">
+		<link rel="stylesheet" type="text/css" href="tooltip.css">
 	</head>
 	
 	<body>
@@ -65,8 +66,13 @@
 					<path d="M67.8945 17.0548C68.2552 16.9963 68.9055 17.0296 68.7739 16.7189C68.6042 16.8165 68.2827 16.8831 67.8945 16.9376V17.0548Z"/>
 					<path d="M67.5874 17.6487C67.6789 17.7269 67.8006 17.7589 67.9188 17.7361C68.5067 17.6225 69.212 17.452 69.5645 17.2612C68.9196 17.3347 68.1375 17.4704 67.5374 17.6059L67.5874 17.6487Z"/>
 					</svg>					
-				<p>Multi-hat Designer @<a href="https://hypenotic.com/">Hypenotic</a>, Toronto.</p>
-					<p>Working in do-good matters, wholesome communication & generative strategy.</p>  
+				<p>Multi-hat Designer @<a class="tooltip" target="_blank" href="https://hypenotic.com/">Hypenotic
+					<span>
+						<video autoplay="true" muted="true" loop="true"> <source src="./assets/reel.webm" type="video/webm"></video>
+						The smell of burning ikea lamp dust and the warmth of hard loft between your toes.
+					</span>
+				</a>, Toronto.</p>
+				<p>Working in do-good matters, wholesome communication & generative strategy.</p> 
 			</article>
 			<aside class="aside aside-1 animated animatedFadeInUp fadeInUp delay1">
 				<svg class="vector" alt="small heart icon" width="12" height="11" viewBox="0 0 12 11" fill="none" xmlns="http://www.w3.org/2000/svg">
