--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<path d="M67.5874 17.6487C67.6789 17.7269 67.8006 17.7589 67.9188 17.7361C68.5067 17.6225 69.212 17.452 69.5645 17.2612C68.9196 17.3347 68.1375 17.4704 67.5374 17.6059L67.5874 17.6487Z"/>
 					</svg>					
 				<p>Multi-hat Designer @<a class="tooltip" target="_blank" href="https://hypenotic.com/">Hypenotic
-					<span>
+					<span class="text-meta">
 						<video autoplay="true" muted="true" loop="true"> <source src="./assets/reel.webm" type="video/webm"></video>
 						The smell of burning ikea lamp dust and the warmth of hard loft between your toes.
 					</span>
