--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					</svg>					
 				<p>Multi-hat Designer @<a class="tooltip" target="_blank" href="https://hypenotic.com/">Hypenotic
 					<span class="text-meta">
-						<video autoplay="true" muted="true" loop="true"> <source src="https://github.com/jam-milllard/jam-site/blob/645d7900bf866d95849c3b1b3cc451c4bd595f1e/Assets/reel.webm" type="video/webm"></video>
+						<video autoplay="true" muted="true" loop="true"> <source src="https://github.com/jam-milllard/jam-site/blob/645d7900bf866d95849c3b1b3cc451c4bd595f1e/Assets/reel.mp4" type="video/webm"></video>
 						The smell of burning ikea lamp dust and the warmth of hard loft between your toes.
 					</span>
 				</a>, Toronto.</p>
