--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 				<p>Multi-hat Designer @<a class="tooltip" target="_blank" href="https://hypenotic.com/">Hypenotic
 					<span class="text-meta">
 						<video autoplay="true" muted="true" loop="true"src="./Assets/webreel.webm" type="video/mp4"></video>
+						<img src="./Assets/black-paper.png" type="image/png"></img>
 						The smell of burning ikea lamp dust and the warmth of hard loft between your toes.
 					</span>
 				</a>, Toronto.</p>
