--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Josh-hyphen-Millard</title>
+		
+		
+        	<meta property="og:url" content="https://josh-millard.com">
+        	<meta property="og:type" content="website">
+        	<meta property="og:title" content="Josh-hyphen-Millard">
+        	<meta property="og:description" content="One of many Josh Millard's">
+        	<meta property="og:image" content=".Assets/joshbyjen.jpg">
+        
+		
 		<link rel="icon" href="Assets/favicon.svg" type="image/svg+xml">
-
+		
 		<link rel="stylesheet" type="text/css" href="apercu.css">
 		<link rel="stylesheet" type="text/css" href="type.css">
 		<link rel="stylesheet" type="text/css" href="animation.css">
