--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         	<meta property="og:type" content="website">
         	<meta property="og:title" content="Josh-hyphen-Millard">
         	<meta property="og:description" content="One of many Josh Millard's">
-        	<meta property="og:image" content=".Assets/joshbyjen.jpg">
+        	<meta property="og:image" content=".Assets/JoshbyJen.jpg">
         
 		
 		<link rel="icon" href="Assets/favicon.svg" type="image/svg+xml">
