--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         	<meta property="og:url" content="https://josh-millard.com">
         	<meta property="og:type" content="website">
         	<meta property="og:title" content="Josh-hyphen-Millard">
-        	<meta property="og:description" content="One of many Josh Millard's">
+        	<meta property="og:description" content="Toronto Designer and one of the many Josh Millards">
         	<meta property="og:image" content=".Assets/JoshbyJen.jpg">
         
 		
