--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         	<meta property="og:image" content=".Assets/JoshbyJen.jpg">
         
 		
-		<link rel="icon" href="Assets/favicon.svg" type="image/svg+xml">
+		<link rel="icon" href="Assets/favicon.png" type="image/png">
 		
 		<link rel="stylesheet" type="text/css" href="apercu.css">
 		<link rel="stylesheet" type="text/css" href="type.css">
